fixed jumping problem
On hover, the animated objects were shifting slightly to right. Fixed this by removing translate properties and replacing with margin-top

--- a/css/style.css
+++ b/css/style.css
@@ -9,36 +9,6 @@ html, body {
   margin: 0;
   padding: 0; }
 
-/* Call to Action on landing page */
-.call_to_action {
-  display: block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-  left: 50%;
-  border-radius: 50px;
-  background: white;
-  transform: translateX(-50%);
-  -webkit-box-shadow: 0px 0px 16px 0px white;
-  -moz-box-shadow: 0px 0px 16px 0px white;
-  box-shadow: 0px 0px 16px 0px white; }
-
-.arrow {
-  position: absolute;
-  left: 50%;
-  top: 40%;
-  transform: translateX(-50%); }
-
-@keyframes bounce {
-  0% {
-    top: 40%;
-    transform: translate(-50%, 20%); }
-  100% {
-    top: 60%;
-    transform: translate(-50%, 60%); } }
-.call_to_action {
-  cursor: pointer; }
-
 /* phones */
 /* Layout files */
 footer {
@@ -120,6 +90,49 @@ nav ul li:hover {
     font-size: 2.5rem;
     display: block; } }
 /* Module files */
+/* Call to Action on landing page */
+.call_to_action {
+  display: block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  margin: 0px auto;
+  border-radius: 50px;
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 16px 0px white;
+  -moz-box-shadow: 0px 0px 16px 0px white;
+  box-shadow: 0px 0px 16px 0px white; }
+
+/* Spinning animation for cta button */
+.call_to_action:hover .arrow {
+  -webkit-animation: spin_grow 0.24s linear both;
+  animation: spin_grow 0.24s linear both; }
+
+/* Animation keyframes */
+@-webkit-keyframes spin_grow {
+  0% {
+    -webkit-transform: scale(1) rotateZ(0);
+    transform: scale(1) rotateZ(0); }
+  50% {
+    -webkit-transform: scale(2) rotateZ(180deg);
+    transform: scale(2) rotateZ(180deg); }
+  100% {
+    -webkit-transform: scale(1) rotateZ(360deg);
+    transform: scale(1) rotateZ(360deg); } }
+@keyframes rotate-scale-up {
+  0% {
+    -webkit-transform: scale(1) rotateZ(0);
+    transform: scale(1) rotateZ(0); }
+  50% {
+    -webkit-transform: scale(2) rotateZ(180deg);
+    transform: scale(2) rotateZ(180deg); }
+  100% {
+    -webkit-transform: scale(1) rotateZ(360deg);
+    transform: scale(1) rotateZ(360deg); } }
+/* cta arrow icon */
+.arrow {
+  margin-top: 40%; }
+
 body {
   font-family: "Montserrat", sans-serif; }
 
