--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,43 +4,3 @@ html, body {
 	margin: 0;
 	padding: 0;
 }
-
-/* Call to Action on landing page */
-
-.call_to_action {
-	display: block;
-	position: relative;
-	width: 80px;
-	height: 80px;
-	left: 50%;
-	border-radius: 50px;
-	background: white;
-	transform: translateX(-50%);
--webkit-box-shadow: 0px 0px 16px 0px rgba(255,255,255,1);
--moz-box-shadow: 0px 0px 16px 0px rgba(255,255,255,1);
-box-shadow: 0px 0px 16px 0px rgba(255,255,255,1);
-}
-
-.arrow{
-	position: absolute;
-	left: 50%;
-	top: 40%;
-	transform: translateX(-50%);
-}
-
-@keyframes bounce {
-  0%  { 
-  top: 40%;
-  transform: translate(-50%, 20%);
-  }
-
-  100% { 
-  top: 60%;
-  transform: translate(-50%, 60%);
-  }
-}
-
-.call_to_action{
-	cursor: pointer;
-	//animation: bounce 1s ease infinite;
-}
